check_PROGRAMS = trace

TESTS = $(check_PROGRAMS)

trace_SOURCES = \
	swfdec_interaction.c \
	trace.c

noinst_HEADERS = \
	swfdec_interaction.h

trace_CFLAGS = $(GLOBAL_CFLAGS) $(SWFDEC_CFLAGS) $(CAIRO_CFLAGS) $(GTHREAD_CFLAGS)
trace_LDFLAGS = $(SWFDEC_LIBS) $(CAIRO_LIBS) $(GTHREAD_LIBS)

EXTRA_DIST = \
	README \
	abort-really-aborts.as \
	abort-really-aborts-5.swf \
	abort-really-aborts-5.swf.trace \
	abort-really-aborts-6.swf \
	abort-really-aborts-6.swf.trace \
	abort-really-aborts-7.swf \
	abort-really-aborts-7.swf.trace \
	add2.as \
	add2-5.swf \
	add2-5.swf.trace \
	add2-6.swf \
	add2-6.swf.trace \
	add2-7.swf \
	add2-7.swf.trace \
	addProperty.as \
	addProperty-5.swf \
	addProperty-5.swf.trace \
	addProperty-6.swf \
	addProperty-6.swf.trace \
	addProperty-7.swf \
	addProperty-7.swf.trace \
	addProperty-8.swf \
	addProperty-8.swf.trace \
	addProperty-delete.as \
	addProperty-delete-5.swf \
	addProperty-delete-5.swf.trace \
	addProperty-delete-6.swf \
	addProperty-delete-6.swf.trace \
	addProperty-delete-7.swf \
	addProperty-delete-7.swf.trace \
	addProperty-delete-8.swf \
	addProperty-delete-8.swf.trace \
	addProperty-flags.as \
	addProperty-flags-5.swf \
	addProperty-flags-5.swf.trace \
	addProperty-flags-6.swf \
	addProperty-flags-6.swf.trace \
	addProperty-flags-7.swf \
	addProperty-flags-7.swf.trace \
	addProperty-flags-8.swf \
	addProperty-flags-8.swf.trace \
	addProperty-get-prototypes.as \
	addProperty-get-prototypes-5.swf \
	addProperty-get-prototypes-5.swf.trace \
	addProperty-get-prototypes-6.swf \
	addProperty-get-prototypes-6.swf.trace \
	addProperty-get-prototypes-7.swf \
	addProperty-get-prototypes-7.swf.trace \
	addProperty-get-prototypes-8.swf \
	addProperty-get-prototypes-8.swf.trace \
	addProperty-set-prototypes.as \
	addProperty-set-prototypes-5.swf \
	addProperty-set-prototypes-5.swf.trace \
	addProperty-set-prototypes-6.swf \
	addProperty-set-prototypes-6.swf.trace \
	addProperty-set-prototypes-7.swf \
	addProperty-set-prototypes-7.swf.trace \
	addProperty-set-prototypes-8.swf \
	addProperty-set-prototypes-8.swf.trace \
	and-or-5.swf \
	and-or-5.swf.trace \
	and-or-6.swf \
	and-or-6.swf.trace \
	and-or-7.swf \
	and-or-7.swf.trace \
	array.swf \
	array.swf.trace \
	array-new.as \
	array-new-5.swf \
	array-new-5.swf.trace \
	array-new-6.swf \
	array-new-6.swf.trace \
	array-new-7.swf \
	array-new-7.swf.trace \
	array-new-override.as \
	array-new-override-5.swf \
	array-new-override-5.swf.trace \
	array-new-override-6.swf \
	array-new-override-6.swf.trace \
	array-new-override-7.swf \
	array-new-override-7.swf.trace \
	array-properties.as \
	array-properties-5.swf \
	array-properties-5.swf.trace \
	array-properties-6.swf \
	array-properties-6.swf.trace \
	array-properties-7.swf \
	array-properties-7.swf.trace \
	array2.as \
	array2-5.swf \
	array2-5.swf.trace \
	array2-6.swf \
	array2-6.swf.trace \
	array2-7.swf \
	array2-7.swf.trace \
	array2-8.swf \
	array2-8.swf.trace \
	asbroadcaster-broadcastMessage-retval.as \
	asbroadcaster-broadcastMessage-retval-5.swf \
	asbroadcaster-broadcastMessage-retval-5.swf.trace \
	asbroadcaster-broadcastMessage-retval-6.swf \
	asbroadcaster-broadcastMessage-retval-6.swf.trace \
	asbroadcaster-broadcastMessage-retval-7.swf \
	asbroadcaster-broadcastMessage-retval-7.swf.trace \
	asbroadcaster-broadcastMessage-retval-8.swf \
	asbroadcaster-broadcastMessage-retval-8.swf.trace \
	asbroadcaster-listeners.as \
	asbroadcaster-listeners-5.swf \
	asbroadcaster-listeners-5.swf.trace \
	asbroadcaster-listeners-6.swf \
	asbroadcaster-listeners-6.swf.trace \
	asbroadcaster-listeners-7.swf \
	asbroadcaster-listeners-7.swf.trace \
	asbroadcaster-listeners-8.swf \
	asbroadcaster-listeners-8.swf.trace \
	asbroadcaster-override.as \
	asbroadcaster-override-5.swf \
	asbroadcaster-override-5.swf.trace \
	asbroadcaster-override-6.swf \
	asbroadcaster-override-6.swf.trace \
	asbroadcaster-override-7.swf \
	asbroadcaster-override-7.swf.trace \
	asbroadcaster-override-8.swf \
	asbroadcaster-override-8.swf.trace \
	asbroadcaster-properties.as \
	asbroadcaster-properties-5.swf \
	asbroadcaster-properties-5.swf.trace \
	asbroadcaster-properties-6.swf \
	asbroadcaster-properties-6.swf.trace \
	asbroadcaster-properties-7.swf \
	asbroadcaster-properties-7.swf.trace \
	asfunction-properties.as \
	asfunction-properties-5.swf \
	asfunction-properties-5.swf.trace \
	asfunction-properties-6.swf \
	asfunction-properties-6.swf.trace \
	asfunction-properties-7.swf \
	asfunction-properties-7.swf.trace \
	asnative-create.as \
	asnative-create-5.swf \
	asnative-create-5.swf.trace \
	asnative-create-6.swf \
	asnative-create-6.swf.trace \
	asnative-create-7.swf \
	asnative-create-7.swf.trace \
	asnative-create-8.swf \
	asnative-create-8.swf.trace \
	ASSetPropFlags-extended.as \
	ASSetPropFlags-extended-5.swf \
	ASSetPropFlags-extended-5.swf.trace \
	ASSetPropFlags-extended-6.swf \
	ASSetPropFlags-extended-6.swf.trace \
	ASSetPropFlags-extended-7.swf \
	ASSetPropFlags-extended-7.swf.trace \
	ASSetPropFlags-extended-8.swf \
	ASSetPropFlags-extended-8.swf.trace \
	ASSetPropFlags-ignore.as \
	ASSetPropFlags-ignore-5.swf \
	ASSetPropFlags-ignore-5.swf.trace \
	ASSetPropFlags-ignore-6.swf \
	ASSetPropFlags-ignore-6.swf.trace \
	ASSetPropFlags-ignore-7.swf \
	ASSetPropFlags-ignore-7.swf.trace \
	ASSetPropFlags-ignore-8.swf \
	ASSetPropFlags-ignore-8.swf.trace \
	bitwise.as \
	bitwise-5.swf \
	bitwise-5.swf.trace \
	bitwise-6.swf \
	bitwise-6.swf.trace \
	bitwise-7.swf \
	bitwise-7.swf.trace \
	boolean-properties.as \
	boolean-properties-5.swf \
	boolean-properties-5.swf.trace \
	boolean-properties-6.swf \
	boolean-properties-6.swf.trace \
	boolean-properties-7.swf \
	boolean-properties-7.swf.trace \
	call-arguments.as \
	call-arguments-5.swf \
	call-arguments-5.swf.trace \
	call-arguments-6.swf \
	call-arguments-6.swf.trace \
	call-arguments-7.swf \
	call-arguments-7.swf.trace \
	call-arguments-8.swf \
	call-arguments-8.swf.trace \
	callfunction-stack.as \
	callfunction-stack.swf \
	callfunction-stack.swf.trace \
	callmethod-undefined-this-5.swf \
	callmethod-undefined-this-5.swf.trace \
	callmethod-undefined-this-6.swf \
	callmethod-undefined-this-6.swf.trace \
	callmethod-undefined-this-7.swf \
	callmethod-undefined-this-7.swf.trace \
	callmethod-undefined-this.as \
	case1-6.swf \
	case1-6.swf.trace \
	case1-7.swf \
	case1-7.swf.trace \
	charat.as \
	charat-5.swf \
	charat-5.swf.trace \
	charat-6.swf \
	charat-6.swf.trace \
	charat-7.swf \
	charat-7.swf.trace \
	chartoascii.as \
	chartoascii-4.swf \
	chartoascii-4.swf.trace \
	chartoascii-5.swf \
	chartoascii-5.swf.trace \
	chartoascii-6.swf \
	chartoascii-6.swf.trace \
	chartoascii-7.swf \
	chartoascii-7.swf.trace \
	children.swf \
	children.swf.trace \
	chr.as \
	chr-5.swf \
	chr-5.swf.trace \
	chr-6.swf \
	chr-6.swf.trace \
	chr-7.swf \
	chr-7.swf.trace \
	classes.swf \
	classes.swf.trace \
	clonesprite-depths.as \
	clonesprite-depths-5.swf \
	clonesprite-depths-5.swf.trace \
	clonesprite-depths-6.swf \
	clonesprite-depths-6.swf.trace \
	clonesprite-depths-7.swf \
	clonesprite-depths-7.swf.trace \
	clonesprite-depths-8.swf \
	clonesprite-depths-8.swf.trace \
	clonesprite-events.c \
	clonesprite-events-5.swf \
	clonesprite-events-5.swf.trace \
	clonesprite-events-6.swf \
	clonesprite-events-6.swf.trace \
	clonesprite-events-7.swf \
	clonesprite-events-7.swf.trace \
	clonesprite-events-8.swf \
	clonesprite-events-8.swf.trace \
	color-getters.swf \
	color-getters.swf.trace \
	color-new.swf \
	color-new.swf.trace \
	color-properties.as \
	color-properties-5.swf\
	color-properties-5.swf.trace\
	color-properties-6.swf\
	color-properties-6.swf.trace\
	color-properties-7.swf\
	color-properties-7.swf.trace\
	color-setRGB.swf \
	color-setRGB.swf.trace \
	color-setTransform-alpha.swf \
	color-setTransform-alpha.swf.trace \
	color-setTransform-empty.swf \
	color-setTransform-empty.swf.trace \
	color-setTransform-negative.swf \
	color-setTransform-negative.swf.trace \
	color-setTransform-full.swf \
	color-setTransform-full.swf.trace \
	color1.swf \
	color1.swf.trace \
	comparisons-4.swf \
	comparisons-4.swf.trace \
	comparisons-5.swf \
	comparisons-5.swf.trace \
	comparisons-6.swf \
	comparisons-6.swf.trace \
	comparisons-7.swf \
	comparisons-7.swf.trace \
	construct-constructors.as \
	construct-constructors-5.swf \
	construct-constructors-5.swf.trace \
	construct-constructors-6.swf \
	construct-constructors-6.swf.trace \
	construct-constructors-7.swf \
	construct-constructors-7.swf.trace \
	construct-constructors-8.swf \
	construct-constructors-8.swf.trace \
	construct-properties.as \
	construct-properties-5.swf \
	construct-properties-5.swf.trace \
	construct-properties-6.swf \
	construct-properties-6.swf.trace \
	construct-properties-7.swf \
	construct-properties-7.swf.trace \
	construct-properties-8.swf \
	construct-properties-8.swf.trace \
	constructor-madness.as \
	constructor-madness-5.swf \
	constructor-madness-5.swf.trace \
	constructor-madness-6.swf \
	constructor-madness-6.swf.trace \
	constructor-madness-7.swf \
	constructor-madness-7.swf.trace \
	constructor-madness-8.swf \
	constructor-madness-8.swf.trace \
	constructor-prototype.swf \
	constructor-prototype.swf.trace \
	countdown.swf \
	countdown.swf.trace \
	crash-0.5.2-new-netstream.as \
	crash-0.5.2-new-netstream.swf \
	crash-0.5.2-new-netstream.swf.trace \
	crash-0.5.2-startdrag.as \
	crash-0.5.2-startdrag.swf \
	crash-0.5.2-startdrag.swf.trace \
	currentframe.swf \
	currentframe.swf.trace \
	date.as \
	date-5.swf \
	date-5.swf.trace \
	date-6.swf \
	date-6.swf.trace \
	date-7.swf \
	date-7.swf.trace \
	date-properties.as \
	date-properties-5.swf \
	date-properties-5.swf.trace \
	date-properties-6.swf \
	date-properties-6.swf.trace \
	date-properties-7.swf \
	date-properties-7.swf.trace \
	definefunction2-arguments.swf \
	definefunction2-arguments.swf.trace \
	definefunction2-arguments.xml \
	definefunction2-arguments-registers.swf \
	definefunction2-arguments-registers.swf.trace \
	definefunction2-arguments-registers.xml \
	definefunction2-overwrite.swf \
	definefunction2-overwrite.swf.trace \
	definefunction2-overwrite.xml \
	definefunction2-registers.xml \
	definefunction2-registers-5.swf \
	definefunction2-registers-5.swf.trace \
	definefunction2-registers-6.swf \
	definefunction2-registers-6.swf.trace \
	definefunction2-registers-7.swf \
	definefunction2-registers-7.swf.trace \
	definefunction2-registers-8.swf \
	definefunction2-registers-8.swf.trace \
	definefunction2-this.swf \
	definefunction2-this.swf.trace \
	definefunction2-this.xml \
	definelocal-function-target.as \
	definelocal-function-target-5.swf \
	definelocal-function-target-5.swf.trace \
	definelocal-function-target-6.swf \
	definelocal-function-target-6.swf.trace \
	definelocal-function-target-7.swf \
	definelocal-function-target-7.swf.trace \
	definelocal-target.as \
	definelocal-target-5.swf \
	definelocal-target-5.swf.trace \
	definelocal-target-6.swf \
	definelocal-target-6.swf.trace \
	definelocal-target-7.swf \
	definelocal-target-7.swf.trace \
	delete-object.as \
	delete-object-5.swf \
	delete-object-5.swf.trace \
	delete-object-6.swf \
	delete-object-6.swf.trace \
	delete-object-7.swf \
	delete-object-7.swf.trace \
	delete-prototypes.as \
	delete-prototypes-5.swf \
	delete-prototypes-5.swf.trace \
	delete-prototypes-6.swf \
	delete-prototypes-6.swf.trace \
	delete-prototypes-7.swf \
	delete-prototypes-7.swf.trace \
	divide.as \
	divide-7.swf \
	divide-7.swf.trace \
	doaction-after-placeobject.swf.trace \
	doaction-after-placeobject.swf \
	doaction-before-placeobject.c \
	doaction-before-placeobject.swf \
	doaction-before-placeobject.swf.trace \
	double.swf \
	double.swf.trace \
	double.swf.trace.org \
	double-to-string.as
	double-to-string-5.swf \
	double-to-string-5.swf.trace \
	double-to-string-5.swf.trace.org \
	double-to-string-6.swf \
	double-to-string-6.swf.trace \
	double-to-string-6.swf.trace.org \
	double-to-string-7.swf \
	double-to-string-7.swf.trace \
	double-to-string-7.swf.trace.org \
	duplicateMovieClip-events.c \
	duplicateMovieClip-events-5.swf \
	duplicateMovieClip-events-5.swf.trace \
	duplicateMovieClip-events-6.swf \
	duplicateMovieClip-events-6.swf.trace \
	duplicateMovieClip-events-7.swf \
	duplicateMovieClip-events-7.swf.trace \
	duplicateMovieClip-events-8.swf \
	duplicateMovieClip-events-8.swf.trace \
	duplicate-names.as \
	duplicate-names-5.swf \
	duplicate-names-5.swf.trace \
	duplicate-names-6.swf \
	duplicate-names-6.swf.trace \
	duplicate-names-7.swf \
	duplicate-names-7.swf.trace \
	event-order.swf \
	empty-stack.as \
	empty-stack.swf \
	empty-stack.swf.trace \
	equality.as \
	equality-5.swf \
	equality-5.swf.trace \
	equality-6.swf \
	equality-6.swf.trace \
	equality-7.swf \
	equality-7.swf.trace \
	escape.as \
	escape-5.swf \
	escape-5.swf.trace \
	escape-6.swf \
	escape-6.swf.trace \
	escape-7.swf \
	escape-7.swf.trace \
	event-order.swf \
	event-order.swf.trace \
	export-case.c \
	export-case-5.swf \
	export-case-5.swf.trace \
	export-case-6.swf \
	export-case-6.swf.trace \
	export-case-7.swf \
	export-case-7.swf.trace \
	extends-constructors.as \
	extends-constructors-6.swf \
	extends-constructors-6.swf.trace \
	extends-constructors-7.swf \
	extends-constructors-7.swf.trace \
	extends-constructors-8.swf \
	extends-constructors-8.swf.trace \
	extends-simple.swf \
	extends-simple.swf.trace \
	extends-super.swf \
	extends-super.swf.trace \
	foreach-proto-simple.as \
	foreach-proto-simple-5.swf \
	foreach-proto-simple-5.swf.trace \
	foreach-proto-simple-6.swf \
	foreach-proto-simple-6.swf.trace \
	foreach-proto-simple-7.swf \
	foreach-proto-simple-7.swf.trace \
	foreach-proto-simple-8.swf \
	foreach-proto-simple-8.swf.trace \
	fromcharcode.as \
	fromcharcode-5.swf \
	fromcharcode-5.swf.trace \
	fromcharcode-6.swf \
	fromcharcode-6.swf.trace \
	fromcharcode-7.swf \
	fromcharcode-7.swf.trace \
	function1.swf \
	function1.swf.trace \
	function2.swf \
	function2.swf.trace \
	function-properties.as \
	function-properties-5.swf \
	function-properties-5.swf.trace \
	function-properties-6.swf \
	function-properties-6.swf.trace \
	function-properties-7.swf \
	function-properties-7.swf.trace \
	function-prototype-chain.swf \
	function-prototype-chain.swf.trace \
	function-scope.as \
	function-scope-5.swf \
	function-scope-5.swf.trace \
	function-scope-6.swf \
	function-scope-6.swf.trace \
	function-scope-7.swf \
	function-scope-7.swf.trace \
	function-tostring.as \
	function-tostring-5.swf \
	function-tostring-5.swf.trace \
	function-tostring-6.swf \
	function-tostring-6.swf.trace \
	function-tostring-7.swf \
	function-tostring-7.swf.trace \
	function-undefined.swf \
	function-undefined.swf.trace \
	forin-delete.as \
	forin-delete-5.swf \
	forin-delete-5.swf.trace \
	forin-delete-6.swf \
	forin-delete-6.swf.trace \
	forin-delete-7.swf \
	forin-delete-7.swf.trace \
	global-function-properties.as \
	global-function-properties-5.swf \
	global-function-properties-5.swf.trace \
	global-function-properties-6.swf \
	global-function-properties-6.swf.trace \
	global-function-properties-7.swf \
	global-function-properties-7.swf.trace \
	global-variable-properties.as \
	global-variable-properties-5.swf \
	global-variable-properties-5.swf.trace \
	global-variable-properties-6.swf \
	global-variable-properties-6.swf.trace \
	global-variable-properties-7.swf \
	global-variable-properties-7.swf.trace \
	goto1.swf \
	goto1.swf.trace \
	goto2.swf \
	goto2.swf.trace \
	goto3.swf \
	goto3.swf.trace \
	goto4.swf \
	goto4.swf.trace \
	goto5.swf \
	goto5.swf.trace \
	gotoframe.swf \
	gotoframe.swf.trace \
	hasownproperty-propflags.as \
	hasownproperty-propflags-5.swf \
	hasownproperty-propflags-5.swf.trace \
	hasownproperty-propflags-6.swf \
	hasownproperty-propflags-6.swf.trace \
	hasownproperty-propflags-7.swf \
	hasownproperty-propflags-7.swf.trace \
	height1.swf \
	height1.swf.trace \
	height2.swf \
	height2.swf.trace \
	height3.swf \
	height3.swf.trace \
	height4.swf \
	height4.swf.trace \
	if.as \
	if-5.swf \
	if-5.swf.trace \
	if-6.swf \
	if-6.swf.trace \
	if-7.swf \
	if-7.swf.trace \
	initobject-stack.as \
	initobject-stack-5.swf \
	initobject-stack-5.swf.trace \
	initobject-stack-6.swf \
	initobject-stack-6.swf.trace \
	initobject-stack-7.swf \
	initobject-stack-7.swf.trace \
	instance-name-loaded.c \
	instance-name-loaded-5.swf \
	instance-name-loaded-5.swf.trace \
	instance-name-loaded-6.swf \
	instance-name-loaded-6.swf.trace \
	instance-name-loaded-7.swf \
	instance-name-loaded-7.swf.trace \
	invalid-variable-name.as \
	invalid-variable-name-5.swf \
	invalid-variable-name-5.swf.trace \
	invalid-variable-name-6.swf \
	invalid-variable-name-6.swf.trace \
	invalid-variable-name-7.swf \
	invalid-variable-name-7.swf.trace \
	invalid-variable-name-8.swf \
	invalid-variable-name-8.swf.trace \
	isnan.as \
	isnan-5.swf \
	isnan-5.swf.trace \
	isnan-6.swf \
	isnan-6.swf.trace \
	isnan-7.swf \
	isnan-7.swf.trace \
	jump-into-with.as \
	jump-into-with.swf \
	jump-into-with.swf.trace \
	jump-out-and-back-into-with.as \
	jump-out-and-back-into-with.swf \
	jump-out-and-back-into-with.swf.trace \
	jump-out-and-back-into-with-2.as \
	jump-out-and-back-into-with-2.swf \
	jump-out-and-back-into-with-2.swf.trace \
	jump-out-and-back-into-with-3.as \
	jump-out-and-back-into-with-3.swf \
	jump-out-and-back-into-with-3.swf.trace \
	jump-out-and-back-into-with-4.as \
	jump-out-and-back-into-with-4.swf \
	jump-out-and-back-into-with-4.swf.trace \
	jump-out-and-back-into-with-5.as \
	jump-out-and-back-into-with-5.swf \
	jump-out-and-back-into-with-5.swf.trace \
	jump-out-of-with.as \
	jump-out-of-with.swf \
	jump-out-of-with.swf.trace \
	level-property.as \
	level-property-5.swf \
	level-property-5.swf.trace \
	level-property-6.swf \
	level-property-6.swf.trace \
	level-property-7.swf \
	level-property-7.swf.trace \
	lifetime1.swf \
	lifetime1.swf.trace \
	load-4.swf \
	load-4.swf.trace \
	load-5.swf \
	load-5.swf.trace \
	loadobject.as \
	loadobject-5.swf \
	loadobject-5.swf.trace \
	loadobject-6.swf \
	loadobject-6.swf.trace \
	loadobject-7.swf \
	loadobject-7.swf.trace \
	loadvars.as \
	loadvars-5.swf \
	loadvars-5.swf.trace \
	loadvars-6.swf \
	loadvars-6.swf.trace \
	loadvars-7.swf \
	loadvars-7.swf.trace \
	loadvars.txt \
	local.swf \
	local.swf.trace \
	lots-of-arguments.as \
	lots-of-arguments-5.swf \
	lots-of-arguments-5.swf.trace \
	lots-of-arguments-6.swf \
	lots-of-arguments-6.swf.trace \
	lots-of-arguments-7.swf \
	lots-of-arguments-7.swf.trace \
	lots-of-arguments-8.swf \
	lots-of-arguments-8.swf.trace \
	math-actions.as \
	math-actions-5.swf \
	math-actions-5.swf.trace \
	math-actions-5.swf.trace.org \
	math-actions-6.swf \
	math-actions-6.swf.trace \
	math-actions-6.swf.trace.org \
	math-actions-7.swf \
	math-actions-7.swf.trace \
	math-actions-7.swf.trace.org \
	math-constants.as \
	math-constants-5.swf \
	math-constants-5.swf.trace \
	math-constants-6.swf \
	math-constants-6.swf.trace \
	math-constants-7.swf \
	math-constants-7.swf.trace \
	math-properties.as \
	math-properties-5.swf \
	math-properties-5.swf.trace \
	math-properties-6.swf \
	math-properties-6.swf.trace \
	math-properties-7.swf \
	math-properties-7.swf.trace \
	mouse-properties.as \
	mouse-properties-5.swf \
	mouse-properties-5.swf.trace \
	mouse-properties-6.swf \
	mouse-properties-6.swf.trace \
	mouse-properties-7.swf \
	mouse-properties-7.swf.trace \
	mouse-scaled.as \
	mouse-scaled-5.swf \
	mouse-scaled-5.swf.act \
	mouse-scaled-5.swf.trace \
	mouse-scaled-6.swf \
	mouse-scaled-6.swf.act \
	mouse-scaled-6.swf.trace \
	mouse-scaled-6.swf.trace.org \
	mouse-scaled-7.swf \
	mouse-scaled-7.swf.act \
	mouse-scaled-7.swf.trace \
	mouse-scaled-7.swf.trace.org \
	mouse-show-hide.as \
	mouse-show-hide-5.swf \
	mouse-show-hide-5.swf.trace \
	mouse-show-hide-6.swf \
	mouse-show-hide-6.swf.trace \
	mouse-show-hide-7.swf \
	mouse-show-hide-7.swf.trace \
	name.swf \
	name.swf.trace \
	name2.swf \
	name2.swf.trace \
	names.swf \
	names.swf.trace \
	netconnection.swf \
	netconnection.swf.trace \
	netstream-load-loop.as \
	netstream-load-loop-6.swf \
	netstream-load-loop-6.swf.trace \
	netstream-load-loop-7.swf \
	netstream-load-loop-7.swf.trace \
	netstream-load-loop-8.swf \
	netstream-load-loop-8.swf.trace \
	netstream-onstatus.c \
	netstream-onstatus.swf \
	netstream-onstatus.swf.trace \
	netstream-onstatus-notfound.as \
	netstream-onstatus-notfound.swf \
	netstream-onstatus-notfound.swf.trace \
	number.swf \
	number.swf.trace \
	number-properties.as \
	number-properties-5.swf \
	number-properties-5.swf.trace \
	number-properties-6.swf \
	number-properties-6.swf.trace \
	number-properties-7.swf \
	number-properties-7.swf.trace \
	number-properties-8.swf \
	number-properties-8.swf.trace \
	object-math-5.swf \
	object-math-5.swf.trace \
	object-math-6.swf \
	object-math-6.swf.trace \
	object-math-7.swf \
	object-math-7.swf.trace \
	object-valueof.as \
	object-valueof-5.swf \
	object-valueof-5.swf.trace \
	object-valueof-6.swf \
	object-valueof-6.swf.trace \
	object-valueof-7.swf \
	object-valueof-7.swf.trace \
	object-valueof-8.swf \
	object-valueof-8.swf.trace \
	onload-childparent.c \
	onload-childparent.swf \
	onload-childparent.swf.trace \
	onresize.as \
	onresize-5.swf \
	onresize-5.swf.trace \
	onresize-6.swf \
	onresize-6.swf.trace \
	onresize-7.swf \
	onresize-7.swf.trace \
	onresize-8.swf \
	onresize-8.swf.trace \
	order.swf \
	order.swf.trace \
	parent-root.swf \
	parent-root.swf.trace \
	place-object.c \
	place-object-5.swf \
	place-object-5.swf.trace \
	place-object-6.swf \
	place-object-6.swf.trace \
	place-object-7.swf \
	place-object-7.swf.trace \
	place-object-button-5.swf \
	place-object-button-5.swf.trace \
	place-object-button-6.swf \
	place-object-button-6.swf.trace \
	place-object-button-7.swf \
	place-object-button-7.swf.trace \
	place-object-button-move-5.swf \
	place-object-button-move-5.swf.trace \
	place-object-button-move-6.swf \
	place-object-button-move-6.swf.trace \
	place-object-button-move-7.swf \
	place-object-button-move-7.swf.trace \
	place-object-button-move-name-5.swf \
	place-object-button-move-name-5.swf.trace \
	place-object-button-move-name-6.swf \
	place-object-button-move-name-6.swf.trace \
	place-object-button-move-name-7.swf \
	place-object-button-move-name-7.swf.trace \
	place-object-button-name-5.swf \
	place-object-button-name-5.swf.trace \
	place-object-button-name-6.swf \
	place-object-button-name-6.swf.trace \
	place-object-button-name-7.swf \
	place-object-button-name-7.swf.trace \
	place-object-char-5.swf \
	place-object-char-5.swf.trace \
	place-object-char-6.swf \
	place-object-char-6.swf.trace \
	place-object-char-7.swf \
	place-object-char-7.swf.trace \
	place-object-char-move-5.swf \
	place-object-char-move-5.swf.trace \
	place-object-char-move-6.swf \
	place-object-char-move-6.swf.trace \
	place-object-char-move-7.swf \
	place-object-char-move-7.swf.trace \
	place-object-char-move-name-5.swf \
	place-object-char-move-name-5.swf.trace \
	place-object-char-move-name-6.swf \
	place-object-char-move-name-6.swf.trace \
	place-object-char-move-name-7.swf \
	place-object-char-move-name-7.swf.trace \
	place-object-char-name-5.swf \
	place-object-char-name-5.swf.trace \
	place-object-char-name-6.swf \
	place-object-char-name-6.swf.trace \
	place-object-char-name-7.swf \
	place-object-char-name-7.swf.trace \
	place-object-move-5.swf \
	place-object-move-5.swf.trace \
	place-object-move-6.swf \
	place-object-move-6.swf.trace \
	place-object-move-7.swf \
	place-object-move-7.swf.trace \
	place-object-move-name-5.swf \
	place-object-move-name-5.swf.trace \
	place-object-move-name-6.swf \
	place-object-move-name-6.swf.trace \
	place-object-move-name-7.swf \
	place-object-move-name-7.swf.trace \
	place-object-movie-5.swf \
	place-object-movie-5.swf.trace \
	place-object-movie-6.swf \
	place-object-movie-6.swf.trace \
	place-object-movie-7.swf \
	place-object-movie-7.swf.trace \
	place-object-movie-move-5.swf \
	place-object-movie-move-5.swf.trace \
	place-object-movie-move-6.swf \
	place-object-movie-move-6.swf.trace \
	place-object-movie-move-7.swf \
	place-object-movie-move-7.swf.trace \
	place-object-movie-move-name-5.swf \
	place-object-movie-move-name-5.swf.trace \
	place-object-movie-move-name-6.swf \
	place-object-movie-move-name-6.swf.trace \
	place-object-movie-move-name-7.swf \
	place-object-movie-move-name-7.swf.trace \
	place-object-movie-name-5.swf \
	place-object-movie-name-5.swf.trace \
	place-object-movie-name-6.swf \
	place-object-movie-name-6.swf.trace \
	place-object-movie-name-7.swf \
	place-object-movie-name-7.swf.trace \
	place-object-name-5.swf \
	place-object-name-5.swf.trace \
	place-object-name-6.swf \
	place-object-name-6.swf.trace \
	place-object-name-7.swf \
	place-object-name-7.swf.trace \
	place-object-remove-5.swf \
	place-object-remove-5.swf.trace \
	place-object-remove-6.swf \
	place-object-remove-6.swf.trace \
	place-object-remove-7.swf \
	place-object-remove-7.swf.trace \
	place-object-remove-button-5.swf \
	place-object-remove-button-5.swf.trace \
	place-object-remove-button-6.swf \
	place-object-remove-button-6.swf.trace \
	place-object-remove-button-7.swf \
	place-object-remove-button-7.swf.trace \
	place-object-remove-button-move-5.swf \
	place-object-remove-button-move-5.swf.trace \
	place-object-remove-button-move-6.swf \
	place-object-remove-button-move-6.swf.trace \
	place-object-remove-button-move-7.swf \
	place-object-remove-button-move-7.swf.trace \
	place-object-remove-button-move-name-5.swf \
	place-object-remove-button-move-name-5.swf.trace \
	place-object-remove-button-move-name-6.swf \
	place-object-remove-button-move-name-6.swf.trace \
	place-object-remove-button-move-name-7.swf \
	place-object-remove-button-move-name-7.swf.trace \
	place-object-remove-button-name-5.swf \
	place-object-remove-button-name-5.swf.trace \
	place-object-remove-button-name-6.swf \
	place-object-remove-button-name-6.swf.trace \
	place-object-remove-button-name-7.swf \
	place-object-remove-button-name-7.swf.trace \
	place-object-remove-char-5.swf \
	place-object-remove-char-5.swf.trace \
	place-object-remove-char-6.swf \
	place-object-remove-char-6.swf.trace \
	place-object-remove-char-7.swf \
	place-object-remove-char-7.swf.trace \
	place-object-remove-char-move-5.swf \
	place-object-remove-char-move-5.swf.trace \
	place-object-remove-char-move-6.swf \
	place-object-remove-char-move-6.swf.trace \
	place-object-remove-char-move-7.swf \
	place-object-remove-char-move-7.swf.trace \
	place-object-remove-char-move-name-5.swf \
	place-object-remove-char-move-name-5.swf.trace \
	place-object-remove-char-move-name-6.swf \
	place-object-remove-char-move-name-6.swf.trace \
	place-object-remove-char-move-name-7.swf \
	place-object-remove-char-move-name-7.swf.trace \
	place-object-remove-char-name-5.swf \
	place-object-remove-char-name-5.swf.trace \
	place-object-remove-char-name-6.swf \
	place-object-remove-char-name-6.swf.trace \
	place-object-remove-char-name-7.swf \
	place-object-remove-char-name-7.swf.trace \
	place-object-remove-move-5.swf \
	place-object-remove-move-5.swf.trace \
	place-object-remove-move-6.swf \
	place-object-remove-move-6.swf.trace \
	place-object-remove-move-7.swf \
	place-object-remove-move-7.swf.trace \
	place-object-remove-move-name-5.swf \
	place-object-remove-move-name-5.swf.trace \
	place-object-remove-move-name-6.swf \
	place-object-remove-move-name-6.swf.trace \
	place-object-remove-move-name-7.swf \
	place-object-remove-move-name-7.swf.trace \
	place-object-remove-movie-5.swf \
	place-object-remove-movie-5.swf.trace \
	place-object-remove-movie-6.swf \
	place-object-remove-movie-6.swf.trace \
	place-object-remove-movie-7.swf \
	place-object-remove-movie-7.swf.trace \
	place-object-remove-movie-move-5.swf \
	place-object-remove-movie-move-5.swf.trace \
	place-object-remove-movie-move-6.swf \
	place-object-remove-movie-move-6.swf.trace \
	place-object-remove-movie-move-7.swf \
	place-object-remove-movie-move-7.swf.trace \
	place-object-remove-movie-move-name-5.swf \
	place-object-remove-movie-move-name-5.swf.trace \
	place-object-remove-movie-move-name-6.swf \
	place-object-remove-movie-move-name-6.swf.trace \
	place-object-remove-movie-move-name-7.swf \
	place-object-remove-movie-move-name-7.swf.trace \
	place-object-remove-movie-name-5.swf \
	place-object-remove-movie-name-5.swf.trace \
	place-object-remove-movie-name-6.swf \
	place-object-remove-movie-name-6.swf.trace \
	place-object-remove-movie-name-7.swf \
	place-object-remove-movie-name-7.swf.trace \
	place-object-remove-name-5.swf \
	place-object-remove-name-5.swf.trace \
	place-object-remove-name-6.swf \
	place-object-remove-name-6.swf.trace \
	place-object-remove-name-7.swf \
	place-object-remove-name-7.swf.trace \
	preload.swf \
	preload.swf.trace \
	property-native.as \
	property-native-5.swf \
	property-native-5.swf.trace \
	property-native-6.swf \
	property-native-6.swf.trace \
	property-native-7.swf \
	property-native-7.swf.trace \
	property-native-8.swf \
	property-native-8.swf.trace \
	prototype-addProperty.as \
	prototype-addProperty-5.swf \
	prototype-addProperty-5.swf.trace \
	prototype-addProperty-6.swf \
	prototype-addProperty-6.swf.trace \
	prototype-addProperty-7.swf \
	prototype-addProperty-7.swf.trace \
	prototype-addProperty-8.swf \
	prototype-addProperty-8.swf.trace \
	prototype-movie.as \
	prototype-movie-5.swf \
	prototype-movie-5.swf.trace \
	prototype-movie-6.swf \
	prototype-movie-6.swf.trace \
	prototype-movie-7.swf \
	prototype-movie-7.swf.trace \
	prototype-movie-8.swf \
	prototype-movie-8.swf.trace \
	prototype-recursion-addProperty.as \
	prototype-recursion-addProperty-5.swf \
	prototype-recursion-addProperty-5.swf.trace \
	prototype-recursion-addProperty-6.swf \
	prototype-recursion-addProperty-6.swf.trace \
	prototype-recursion-addProperty-7.swf \
	prototype-recursion-addProperty-7.swf.trace \
	prototype-recursion-addProperty-8.swf \
	prototype-recursion-addProperty-8.swf.trace \
	prototype-recursion-get.as \
	prototype-recursion-get-5.swf \
	prototype-recursion-get-5.swf.trace \
	prototype-recursion-get-6.swf \
	prototype-recursion-get-6.swf.trace \
	prototype-recursion-get-7.swf \
	prototype-recursion-get-7.swf.trace \
	prototype-recursion-get-8.swf \
	prototype-recursion-get-8.swf.trace \
	prototypes.swf \
	prototypes.swf.trace \
	propflags.as \
	propflags-5.swf \
	propflags-5.swf.trace \
	propflags-6.swf \
	propflags-6.swf.trace \
	propflags-7.swf \
	propflags-7.swf.trace \
	propflags-set.as \
	propflags-set-5.swf \
	propflags-set-5.swf.trace \
	propflags-set-6.swf \
	propflags-set-6.swf.trace \
	propflags-set-7.swf \
	propflags-set-7.swf.trace \
	register-count.swf \
	register-count.swf.trace \
	register-count.xml \
	registerclass-previous.c \
	registerclass-previous.swf \
	registerclass-previous.swf.trace \
	registerclass-properties.swf \
	registerclass-properties.swf.trace \
	relational.as \
	relational-5.swf \
	relational-5.swf.trace \
	relational-6.swf \
	relational-6.swf.trace \
	relational-7.swf \
	relational-7.swf.trace \
	remove-depths.as \
	remove-depths-5.swf \
	remove-depths-5.swf.trace \
	remove-depths-6.swf \
	remove-depths-6.swf.trace \
	remove-depths-7.swf \
	remove-depths-7.swf.trace \
	remove-depths-8.swf \
	remove-depths-8.swf.trace \
	removesprite-depths.as \
	removesprite-depths-5.swf \
	removesprite-depths-5.swf.trace \
	removesprite-depths-6.swf \
	removesprite-depths-6.swf.trace \
	removesprite-depths-7.swf \
	removesprite-depths-7.swf.trace \
	rewind-remove.c \
	rewind-remove-5.swf \
	rewind-remove-5.swf.trace \
	rewind-remove-6.swf \
	rewind-remove-6.swf.trace \
	rewind-remove-7.swf \
	rewind-remove-7.swf.trace \
	rewind-remove-8.swf \
	rewind-remove-8.swf.trace \
	rotation-5.swf \
	rotation-5.swf.trace \
	rotation2.as \
	rotation2-5.swf \
	rotation2-5.swf.trace \
	rotation2-6.swf \
	rotation2-6.swf.trace \
	rotation2-7.swf \
	rotation2-7.swf.trace \
	rotation2-8.swf \
	rotation2-8.swf.trace \
	round-direction.as \
	round-direction-5.swf \
	round-direction-5.swf.trace \
	round-direction-6.swf \
	round-direction-6.swf.trace \
	round-direction-7.swf \
	round-direction-7.swf.trace \
	round-direction-8.swf \
	round-direction-8.swf.trace \
	scalemode.as \
	scalemode-5.swf \
	scalemode-5.swf.trace \
	scalemode-6.swf \
	scalemode-6.swf.trace \
	scalemode-7.swf \
	scalemode-7.swf.trace \
	scalemode-8.swf \
	scalemode-8.swf.trace \
	scope.swf \
	scope.swf.trace \
	scope2.swf \
	scope2.swf.trace \
	set-overwrite-global-5.swf \
	set-overwrite-global-6.swf \
	set-overwrite-global-7.swf \
	set-overwrite-global.as \
	set-overwrite-global-5.swf.trace \
	set-overwrite-global-6.swf.trace \
	set-overwrite-global-7.swf.trace \
	setinterval.swf \
	setinterval.swf.trace \
	setinterval2.swf \
	setinterval2.swf.trace \
	setinterval-arguments.as \
	setinterval-arguments.swf \
	setinterval-arguments.swf.trace \
	setinterval-clear.swf \
	setinterval-clear.swf.trace \
	setinterval-this.as \
	setinterval-this-5.swf \
	setinterval-this-5.swf.trace \
	setinterval-this-6.swf \
	setinterval-this-6.swf.trace \
	setinterval-this-7.swf \
	setinterval-this-7.swf.trace \
	setvariable.swf \
	setvariable.swf.trace \
	setvariable-callback.as \
	setvariable-callback-6.swf \
	setvariable-callback-6.swf.trace \
	setvariable-callback-7.swf \
	setvariable-callback-7.swf.trace \
	setvariable-function.as \
	setvariable-function-5.swf \
	setvariable-function-5.swf.trace \
	setvariable-function-6.swf \
	setvariable-function-6.swf.trace \
	setvariable-function-7.swf \
	setvariable-function-7.swf.trace \
	setvariable-function-target.as \
	setvariable-function-target-5.swf \
	setvariable-function-target-5.swf.trace \
	setvariable-function-target-6.swf \
	setvariable-function-target-6.swf.trace \
	setvariable-function-target-7.swf \
	setvariable-function-target-7.swf.trace \
	shift.as \
	shift-5.swf \
	shift-5.swf.trace \
	shift-6.swf \
	shift-6.swf.trace \
	shift-7.swf \
	shift-7.swf.trace \
	stack-overflow.as \
	stack-overflow-5.swf \
	stack-overflow-5.swf.trace \
	stack-overflow-6.swf \
	stack-overflow-6.swf.trace \
	stack-overflow-7.swf \
	stack-overflow-7.swf.trace \
	stack-segment.as \
	stack-segment-5.swf \
	stack-segment-5.swf.trace \
	stack-segment-6.swf \
	stack-segment-6.swf.trace \
	stack-segment-7.swf \
	stack-segment-7.swf.trace \
	stack-segment-8.swf \
	stack-segment-8.swf.trace \
	stack-segments2.as \
	stack-segments2-5.swf \
	stack-segments2-5.swf.trace \
	stack-segments2-6.swf \
	stack-segments2-6.swf.trace \
	stack-segments2-7.swf \
	stack-segments2-7.swf.trace \
	stack-segments2-8.swf \
	stack-segments2-8.swf.trace \
	stage-align.as \
	stage-align-5.swf \
	stage-align-5.swf.trace \
	stage-align-6.swf \
	stage-align-6.swf.trace \
	stage-align-7.swf \
	stage-align-7.swf.trace \
	stage-align-8.swf \
	stage-align-8.swf.trace \
	stage-size.as \
	stage-size-5.swf \
	stage-size-5.swf.trace \
	stage-size-6.swf \
	stage-size-6.swf.trace \
	stage-size-7.swf \
	stage-size-7.swf.trace \
	stage-size-8.swf \
	stage-size-8.swf.trace \
	string-concat.as \
	string-concat-5.swf \
	string-concat-5.swf.trace \
	string-concat-6.swf \
	string-concat-6.swf.trace \
	string-concat-7.swf \
	string-concat-7.swf.trace \
	string-construct.as \
	string-construct-5.swf \
	string-construct-5.swf.trace \
	string-construct-6.swf \
	string-construct-6.swf.trace \
	string-construct-7.swf \
	string-construct-7.swf.trace \
	string-convert.as \
	string-convert-5.swf \
	string-convert-5.swf.trace \
	string-convert-6.swf \
	string-convert-6.swf.trace \
	string-convert-7.swf \
	string-convert-7.swf.trace \
	string-fake.as \
	string-fake-5.swf \
	string-fake-5.swf.trace \
	string-fake-6.swf \
	string-fake-6.swf.trace \
	string-fake-7.swf \
	string-fake-7.swf.trace \
	string-indexof.as \
	string-indexof-5.swf \
	string-indexof-5.swf.trace \
	string-indexof-6.swf \
	string-indexof-6.swf.trace \
	string-indexof-7.swf \
	string-indexof-7.swf.trace \
	string-lastIndexOf.as \
	string-lastIndexOf-5.swf \
	string-lastIndexOf-5.swf.trace \
	string-lastIndexOf-6.swf \
	string-lastIndexOf-6.swf.trace \
	string-lastIndexOf-7.swf \
	string-lastIndexOf-7.swf.trace \
	string-lastIndexOf-8.swf \
	string-lastIndexOf-8.swf.trace \
	string-properties.as \
	string-properties-6.swf \
	string-properties-6.swf.trace \
	string-properties-7.swf \
	string-properties-7.swf.trace \
	string-slice.as \
	string-slice-5.swf \
	string-slice-5.swf.trace \
	string-slice-6.swf \
	string-slice-6.swf.trace \
	string-slice-7.swf \
	string-slice-7.swf.trace \
	string-split.as \
	string-split-5.swf \
	string-split-5.swf.trace \
	string-split-6.swf \
	string-split-6.swf.trace \
	string-split-7.swf \
	string-split-7.swf.trace \
	string-split-empty.as \
	string-split-empty-5.swf \
	string-split-empty-5.swf.trace \
	string-split-empty-6.swf \
	string-split-empty-6.swf.trace \
	string-split-empty-7.swf \
	string-split-empty-7.swf.trace \
	string-trace.as \
	string-trace-5.swf \
	string-trace-5.swf.trace \
	string-trace-6.swf \
	string-trace-6.swf.trace \
	string-trace-7.swf \
	string-trace-7.swf.trace \
	stringlength.as \
	stringlength-5.swf \
	stringlength-5.swf.trace \
	stringlength-6.swf \
	stringlength-6.swf.trace \
	stringlength-7.swf \
	stringlength-7.swf.trace \
	substring.as \
	substr.as \
	substr-5.swf \
	substr-5.swf.trace \
	substr-6.swf \
	substr-6.swf.trace \
	substr-7.swf \
	substr-7.swf.trace \
	substring-5.swf \
	substring-5.swf.trace \
	substring-6.swf \
	substring-6.swf.trace \
	substring-7.swf \
	substring-7.swf.trace \
	super-calls.as \
	super-calls-5.swf \
	super-calls-5.swf.trace \
	super-calls-6.swf \
	super-calls-6.swf.trace \
	super-calls-7.swf \
	super-calls-7.swf.trace \
	super-calls-8.swf \
	super-calls-8.swf.trace \
	super-different.as \
	super-different-5.swf \
	super-different-5.swf.trace \
	super-different-6.swf \
	super-different-6.swf.trace \
	super-different-7.swf \
	super-different-7.swf.trace \
	super-different-8.swf \
	super-different-8.swf.trace \
	super-equals-this.as \
	super-equals-this-5.swf \
	super-equals-this-5.swf.trace \
	super-equals-this-6.swf \
	super-equals-this-6.swf.trace \
	super-equals-this-7.swf \
	super-equals-this-7.swf.trace \
	super-equals-this-8.swf \
	super-equals-this-8.swf.trace \
	super-missing.as \
	super-missing-5.swf \
	super-missing-5.swf.trace \
	super-missing-6.swf \
	super-missing-6.swf.trace \
	super-missing-7.swf \
	super-missing-7.swf.trace \
	super-missing-8.swf \
	super-missing-8.swf.trace \
	super-reference.as \
	super-reference-6.swf \
	super-reference-6.swf.trace \
	super-reference-7.swf \
	super-reference-7.swf.trace \
	super-reference-8.swf \
	super-reference-8.swf.trace \
	super-this.as \
	super-this-5.swf \
	super-this-5.swf.trace \
	super-this-6.swf \
	super-this-6.swf.trace \
	super-this-7.swf \
	super-this-7.swf.trace \
	super-this-8.swf \
	super-this-8.swf.trace \
	system-capabilities-query.as \
	system-capabilities-query-5.swf \
	system-capabilities-query-5.swf.trace \
	system-capabilities-query-6.swf \
	system-capabilities-query-6.swf.trace \
	system-capabilities-query-7.swf \
	system-capabilities-query-7.swf.trace \
	system-capabilities-query-8.swf \
	system-capabilities-query-8.swf.trace \
	targetpath.as \
	targetpath-5.swf \
	targetpath-5.swf.trace \
	targetpath-6.swf \
	targetpath-6.swf.trace \
	targetpath-7.swf \
	targetpath-7.swf.trace \
	this-localfunction.as \
	this-localfunction-5.swf \
	this-localfunction-5.swf.trace \
	this-localfunction-6.swf \
	this-localfunction-6.swf.trace \
	this-localfunction-7.swf \
	this-localfunction-7.swf.trace \
	this-localfunction-8.swf \
	this-localfunction-8.swf.trace \
	tointeger-numbers.as \
	tointeger-numbers-5.swf \
	tointeger-numbers-5.swf.trace \
	tointeger-numbers-6.swf \
	tointeger-numbers-6.swf.trace \
	tointeger-numbers-7.swf \
	tointeger-numbers-7.swf.trace \
	tointeger-various.as \
	tointeger-various-5.swf \
	tointeger-various-5.swf.trace \
	tointeger-various-6.swf \
	tointeger-various-6.swf.trace \
	tointeger-various-7.swf \
	tointeger-various-7.swf.trace \
	transform.swf \
	transform.swf.trace \
	transform2.swf \
	transform2.swf.trace \
	transform2.swf.trace.org \
	undefined-tostring.swf \
	undefined-tostring.swf.trace \
	undefined1.swf \
	undefined1.swf.trace \
	undefined2-6.swf \
	undefined2-6.swf.trace \
	undefined2-7.swf \
	undefined2-7.swf.trace \
	unescape.as \
	unescape-5.swf \
	unescape-5.swf.trace \
	unescape-5.swf.trace.org \
	unescape-6.swf \
	unescape-6.swf.trace \
	unescape-6.swf.trace.org \
	unescape-7.swf \
	unescape-7.swf.trace \
	unescape-7.swf.trace.org \
	unescape2.as \
	unescape2-5.swf \
	unescape2-5.swf.trace \
	unescape2-6.swf \
	unescape2-6.swf.trace \
	unescape2-7.swf \
	unescape2-7.swf.trace \
	values.as \
	video.flv \
	video-properties.as \
	video-properties-6.swf \
	video-properties-6.swf.trace \
	video-properties-7.swf \
	video-properties-7.swf.trace \
	waitforframe-huge.as \
	waitforframe-huge-4.swf \
	waitforframe-huge-4.swf.trace \
	with-delete.as \
	with-delete-5.swf \
	with-delete-5.swf.trace \
	with-delete-6.swf \
	with-delete-6.swf.trace \
	with-delete-7.swf \
	with-delete-7.swf.trace \
	with-function-delete.as \
	with-function-delete-5.swf \
	with-function-delete-5.swf.trace \
	with-function-delete-6.swf \
	with-function-delete-6.swf.trace \
	with-function-delete-7.swf \
	with-function-delete-7.swf.trace \
	with-outobject.as \
	with-outobject-5.swf \
	with-outobject-5.swf.trace \
	with-outobject-6.swf \
	with-outobject-6.swf.trace \
	with-outobject-7.swf \
	with-outobject-7.swf.trace \
	with-outobject-8.swf \
	with-outobject-8.swf.trace \
	with-prototypes.as \
	with-prototypes-5.swf \
	with-prototypes-5.swf.trace \
	with-prototypes-6.swf \
	with-prototypes-6.swf.trace \
	with-prototypes-7.swf \
	with-prototypes-7.swf.trace \
	xml-constructor-properties.as \
	xml-constructor-properties-5.swf \
	xml-constructor-properties-5.swf.trace \
	xml-constructor-properties-6.swf \
	xml-constructor-properties-6.swf.trace \
	xml-constructor-properties-7.swf \
	xml-constructor-properties-7.swf.trace \
	xml-errors.as \
	xml-errors-5.swf \
	xml-errors-5.swf.trace \
	xml-errors-6.swf \
	xml-errors-6.swf.trace \
	xml-errors-7.swf \
	xml-errors-7.swf.trace \
	xml-escape.as \
	xml-escape-5.swf \
	xml-escape-5.swf.trace \
	xml-escape-6.swf \
	xml-escape-6.swf.trace \
	xml-escape-7.swf \
	xml-escape-7.swf.trace \
	xml-node.as \
	xml-node-5.swf \
	xml-node-5.swf.trace \
	xml-node-6.swf \
	xml-node-6.swf.trace \
	xml-node-7.swf \
	xml-node-7.swf.trace \
	xml-other.as \
	xml-other-5.swf \
	xml-other-5.swf.trace \
	xml-other-6.swf \
	xml-other-6.swf.trace \
	xml-other-7.swf \
	xml-other-7.swf.trace \
	xml-parse.as \
	xml-parse-6.swf \
	xml-parse-6.swf.trace \
	xml-parse-7.swf \
	xml-parse-7.swf.trace \
	xml-parse-1.xml \
	xml-parse-2.xml \
	xml-properties.as \
	xml-properties-5.swf \
	xml-properties-5.swf.trace \
	xml-properties-6.swf \
	xml-properties-6.swf.trace \
	xml-properties-7.swf \
	xml-properties-7.swf.trace \
	xml-properties2.as \
	xml-properties2-6.swf \
	xml-properties2-6.swf.trace \
	xml-properties2-7.swf \
	xml-properties2-7.swf.trace \
	xscale.swf \
	xscale.swf.trace

CLEANFILES = tmp
